# Kbench

./: .gitignore  .pdm-python  .readthedocs.yml  README.md  config.yml  kbench.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: release_on_pypi.yml
__old__/: kbench_config.json  newport_test.py  zaber_test.py
__old__/HexDMserver-master/: 27BW007#051.dm
__old__/HexDMserver-master/Closed_Loop_Flat_Maps/: 27W007#051_ClosedLoop1750nmOffset.txt  27W007#051_ClosedLoop2900nmOffset.txt  27W007#051_ClosedLoop500nmOffset.txt
__old__/hardware/: edtpdv_6.2.0_amd64.deb
__old__/motors/: dm_control.py  motors_control.py  newport_control.py  notes_motors.txt
config/calibration/: Sample_Multi-C_OLC1_CAL.mat  Sample_Multi_OLC1_CAL.mat
docs/: bench_overview.md  conf.py  deformable_miror.md  deformable_mirror.md  index.md  index.rst  newport.md  pupil_mask.md  requirements.txt  segment.md  zaber.md
docs/hardware_documentation/Hex-DM-python-interface/: bmc.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/hardware_documentation/Hex-DM-python-interface/.doctrees/: bmc.doctree  environment.pickle  index.doctree
docs/hardware_documentation/Hex-DM-python-interface/_modules/: index.html
docs/hardware_documentation/Hex-DM-python-interface/_modules/bmc/: bmc.html
docs/hardware_documentation/Hex-DM-python-interface/_sources/: bmc.rst.txt  index.rst.txt
kbench/: __init__.py
kbench/classes/: kernel_chip.py  kernel_mount.py  pupil_mask.py
src/: __init__.py
src/bmc/: _bmc.pyd  bmc.py
src/classes/: __init__.py  deformable_mirror.py  pupil_mask.py
src/kbench/classes/: __init__.py  deformable_mirror.py  pupil_mask.py
