[project]
name = "Kbench"
version = "0.3.2"
description = "Kernel test bench controls"
authors = [
    {name = "Photonics", email = "vincent.foriel@gmail.com"},
]
dependencies = [
    "numpy",
    "pyserial",
    "newportESP",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bmc" = ["*.so"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kbench*", bmc*]
