[project]
name = "Kbench"
version = "0.3.3"
description = "Kernel test bench controls"
authors = [
    {name = "Photonics", email = "vincent.foriel@gmail.com"},
    {name = "Vincent Foriel", email = "vincent.foriel@gmail.com"},
]
dependencies = [
    "numpy",
    "pyserial",
    "newportESP",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["kbench*", "bmc*"]

[tool.setuptools.package-data]
"bmc" = ["*.so"]
